restyled training.html, added modals

--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,7 @@
 				</ul>                
 			</div>
 		</nav>
+        <!-- /Navbar -->
 	</header>
 	<article>
 		<div class="container-fluid contact-container">
@@ -93,7 +94,7 @@
 		</div>
 	</article>
 
-    <!--- Modals - code copied from Bootstrap documentation and adapted -->
+    <!-- Modals - code copied from Bootstrap documentation and adapted -->
 	<div class="modal fade" id="callModal" tabindex="-1" role="dialog" aria-labelledby="callModalLabel"
 		aria-hidden="true">
 		<div class="modal-dialog" role="document">
@@ -106,7 +107,7 @@
 				</div>
 				<div class="modal-body custom--modal-body">
 					You can reach us every day (weekends included) <strong>from 10am to 4pm</strong> on the following number: <br />
-                    <span class="phone-number">09 555 1234</span>
+                    <h3 class="phone-number">09 555 1234</h3>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -172,7 +173,7 @@
 			</div>
 		</div>
 	</div>
-    <!--- /Modals  ----------------------------------->
+    <!-- / Modals  -->
 	<footer class="container-fluid footer-bar">
 		<div class="row">
 			<div class="col">
