--- a/training.html
+++ b/training.html
@@ -44,6 +44,7 @@
 				</ul>
 			</div>
 		</nav>
+        <!-- /Navbar-->
 	</header>
 	<article>
 		<div class="container-fluid training-container">
@@ -56,44 +57,38 @@
 						<div class="col-sm-12 col-md-6 col-lg-3 trg">
 							<h4><i class="far fa-thumbs-up"></i>Obedience Class</h4>
 							<p>
-								From leash walking, stopping, heeling and recall to "speaking", staying and releasing
-								items - this course covers everything your pet needs to master for everyday
-								interactions.
-								An essential for any urban dog.
+								An essential course for any urban dog.
 							</p>
+							<span class="read--more"><a href="#"" class="inline--anchor" data-toggle="modal" data-target="#obedienceModal">Read more</a><span>
 						</div>
 						<div class="col-sm-12 col-md-6 col-lg-3 trg">
 							<h4><i class="fas fa-magic"></i>Tricks Class</h4>
 							<p>
-								While the two of you are not expected to perform in a circus group after this course
-								(but you could if you chose to!), tricks training strengthens the owner-dog relationship
-								and enhances your dog's focus and
-								confidence.
+								There is much more to tricks than just showing off.
 							</p>
+                            <span class="read--more"><a href="#"" class="inline--anchor" data-toggle="modal" data-target="#tricksModal">Read more</a><span>
 						</div>
 						<div class="col-sm-12 col-md-6 col-lg-3 trg">
 							<h4><i class="fas fa-paw"></i>Individual Training</h4>
 							<p>
-								You prefer two-on-one interaction rather than group work? We've got you covered!
-								Individual training at our training grounds or in your backyard or neighbourhood park -
-								the choice is all yours.
+								Same curriculum as classes but more flexibility.
 							</p>
+                            <span class="read--more"><a href="#"" class="inline--anchor" data-toggle="modal" data-target="#individualModal">Read more</a><span>
 						</div>
 						<div class="col-sm-12 col-md-6 col-lg-3 trg">
 							<h4><i class="far fa-comments"></i>Consultation</h4>
 							<p>
-								You've encountered a problem and are not sure if it is a problem to begin with? Not sure
-								how to address some specific behaviour of your dog? Or perhaps you need advice on food
-								or training equipment? We're here to support you with our extensive experience.
+                                When a particular issue requires additional focus.
 							</p>
+                            <span class="read--more"><a href="#"" class="inline--anchor" data-toggle="modal" data-target="#consultationModal">Read more</a><span>
 						</div>
 						<div class="row justify-content-center trg-more-info">
 							<div class="col-11">
 								<p class="frame--info">
 									Please check our <a class="inline--anchor" href="#location">location</a> and <a
 										class="inline--anchor" href="#timetable">timetable</a> sections for
-									details about our classes. For
-									information about individual training and consultation, as well as for any other
+									details about our classes. For detailed
+									information about individual training or consultation, as well as for any other
 									question you might have, please do not hesitate to <a class="inline--anchor"
 										href="contact.html">contact
 										us</a>.
@@ -109,14 +104,14 @@
 					<div class="col-md-4 location-info">
 						<p>We are located at:</p>
 						<address><strong>Trg bana J. Jelačića 1, Zagreb</address></strong>
-							<p>Situated in an urban environment, yet sufficiently secure from heavy traffic and
+							<p>
+                                Situated in an urban environment, yet sufficiently secure from heavy traffic and
 								crowds
 								of people, our training ground provides an ideal location for all your training
-								needs.
-								<br />Public transportation nearby.
-								<br />Private parking space available.
-								<p>
-
+								needs.<br />
+                                Public transportation nearby.<br />
+                                Private parking space available.
+							<p>
 					</div>
 					<div class="col-md-8 embed-responsive embed-responsive-16by9 location-map">
 						<iframe
@@ -182,61 +177,156 @@
 			</div>
 		</div>
 	</article>
-
-
-
-
-
-
-	<footer class="container-fluid footer-bar">
-		<div class="row">
-			<div class="col">
-				<div class="social-media">
-					<h5>Follow us:</h5>
-					<ul class="list-inline">
-						<li class="list-inline-item social-link">
-							<a target="_blank" href="https://www.facebook.com">
-								<i class="fab fa-facebook-f" aria-hidden="true"></i>
-								<span class="sr-only">Facebook</span></a>
-						</li>
-						<li class="list-inline-item social-link">
-							<a target="_blank" href="https://www.twitter.com">
-								<i class="fab fa-twitter" aria-hidden="true"></i>
-								<span class="sr-only">Twitter</span>
-							</a>
-						</li>
-						<li class="list-inline-item social-link">
-							<a target="_blank" href="https://www.instagram.com">
-								<i class="fab fa-instagram" aria-hidden="true"></i>
-								<span class="sr-only">Instagram</span>
-							</a>
-						</li>
-						<li class="list-inline-item social-link">
-							<a target="_blank" href="https://www.youtube.com">
-								<i class="fab fa-youtube" aria-hidden="true"></i>
-								<span class="sr-only">YouTube</span>
-							</a>
-						</li>
-					</ul>
-				</div>
-				<div class="copyright">
-					<small>Copyright 2019 by bravoalpha79 - for educational purposes</small>
+	<!-- Modals - code copied from Bootstrap documentation and adapted -->
+	<div class="modal fade" id="obedienceModal" tabindex="-1" role="dialog" aria-labelledby="obedienceModalLabel"
+		aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content custom--modal-bg">
+				<div class="modal-header">
+					<h5 class="modal-title" id="obedienceModalLabel">Obedience class</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+							</button>
+						</div>
+						<div class="modal-body custom--modal-body">
+							<p>
+								From leash walking, stopping, heeling and recall to "speaking", staying and releasing
+								items - this course covers everything your dog needs to master for everyday
+								interactions.
+							</p>
+							<h5>Duration: 8 weeks (2x / week)</h5>
+							<h5>Price: HRK 1500</h5>
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+						</div>
+					</div>
+			</div>
+		</div>
+		<div class="modal fade" id="tricksModal" tabindex="-1" role="dialog" aria-labelledby="tricksModalLabel"
+			aria-hidden="true">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content custom--modal-bg">
+					<div class="modal-header">
+						<h5 class="modal-title" id="tricksModalLabel">Tricks class</h5>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                    </button>
+					</div>
+					<div class="modal-body custom--modal-body">
+						<p>
+							While the two of you are not expected to perform in a circus group after this course
+							(but you could if you chose to!), tricks training strengthens the owner-dog relationship
+							and enhances your dog's focus and confidence.
+						</p>
+						<h5>Duration: 4 weeks (2x / week)</h5>
+						<h5>Price: HRK 1000</h5>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+					</div>
 				</div>
 			</div>
 		</div>
-	</footer>
+		<div class="modal fade" id="individualModal" tabindex="-1" role="dialog" aria-labelledby="individualModalLabel"
+			aria-hidden="true">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content custom--modal-bg">
+					<div class="modal-header">
+						<h5 class="modal-title" id="individualModalLabel">Individual training</h5>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                    </button>
+					</div>
+					<div class="modal-body custom--modal-body">
+						<p>
+							You prefer two-on-one interaction rather than group work? Or perhaps our class schedule is
+							incompatible with yours? Don't worry, we've got you covered!
+							Individual training at our training grounds or in your backyard or neighbourhood park -
+							the choice is all yours.
+						</p>
+						<h5>Duration: varies</h5>
+						<h5>Price: varies</h5>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="modal fade" id="consultationModal" tabindex="-1" role="dialog"
+			aria-labelledby="consultationModalLabel" aria-hidden="true">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content custom--modal-bg">
+					<div class="modal-header">
+						<h5 class="modal-title" id="consultationModalLabel">Consultation</h5>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                    </button>
+					</div>
+					<div class="modal-body custom--modal-body">
+						<p>
+							You've encountered a problem and are not sure if it is a problem to begin with? Not sure
+							how to address some specific behaviour of your dog? Or perhaps you need advice on food
+							or training equipment? We're here to support you with our extensive experience.
+						</p>
+						<h5>Duration: varies</h5>
+						<h5>Price: varies</h5>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- /Modals -->
+		<footer class="container-fluid footer-bar">
+			<div class="row">
+				<div class="col">
+					<div class="social-media">
+						<h5>Follow us:</h5>
+						<ul class="list-inline">
+							<li class="list-inline-item social-link">
+								<a target="_blank" href="https://www.facebook.com">
+									<i class="fab fa-facebook-f" aria-hidden="true"></i>
+									<span class="sr-only">Facebook</span></a>
+							</li>
+							<li class="list-inline-item social-link">
+								<a target="_blank" href="https://www.twitter.com">
+									<i class="fab fa-twitter" aria-hidden="true"></i>
+									<span class="sr-only">Twitter</span>
+								</a>
+							</li>
+							<li class="list-inline-item social-link">
+								<a target="_blank" href="https://www.instagram.com">
+									<i class="fab fa-instagram" aria-hidden="true"></i>
+									<span class="sr-only">Instagram</span>
+								</a>
+							</li>
+							<li class="list-inline-item social-link">
+								<a target="_blank" href="https://www.youtube.com">
+									<i class="fab fa-youtube" aria-hidden="true"></i>
+									<span class="sr-only">YouTube</span>
+								</a>
+							</li>
+						</ul>
+					</div>
+					<div class="copyright">
+						<small>Copyright 2019 by bravoalpha79 - for educational purposes</small>
+					</div>
+				</div>
+			</div>
+		</footer>
 
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-	</script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-	</script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-	</script>
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+			integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+		</script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+			integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+		</script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+			integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+		</script>
 </body>
-
-
 
 </html>
