added home gallery and instructor images

--- a/about.html
+++ b/about.html
@@ -54,10 +54,10 @@
 						<h2>Our instructors</h2>
 					</div>
 				    <div class="row justify-content-center frame--info about-jane">
-					    <div class="col-lg-6 jane-image">
+					    <div class="col-md-6 jane-image">
 							<img src="assets/img/jane.jpg" alt="Jane photo"/>
 					    </div>
-					    <div class="col-lg-6 jane-text">
+					    <div class="col-md-6 jane-text">
 							<h4>Jane Smith</h4>
 							<p>
 									Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, magnam harum
@@ -72,7 +72,7 @@
 					    </div>
 				    </div>
 				    <div class="row justify-content-center frame--info about-john">
-					    <div class="col-lg-6 john-text">
+					    <div class="col-md-6 john-text">
 								<h4>John Smith</h4>
 								<p>
 									Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, magnam harum
@@ -85,7 +85,7 @@
 									veritatis?
 								</p>
 					    </div>
-					    <div class="col-lg-6 john-image">
+					    <div class="col-md-6 john-image">
 								<img src="assets/img/john.jpg" alt="John photo"/>
 					    </div>
 				    </div>
