--- a/index.html
+++ b/index.html
@@ -64,18 +64,34 @@
 					<div class="col-12">
 						<div class="prt-intro frame--main">
 							<h2>Why K9Zen?</h2>
-							<p>Traditional dog training methods rely on the "carrot-and-stick" approach to direct the
-								dog towards
-								desirable behavioural patterns. However, while appearing effective on the short
-								term, any form of punishment may induce unwanted long-term effects on
-								the dog such as development of anxiety or aggression, and negatively impact the
-								owner-dog relationship. <br /><br />
-						At K9Zen, we apply the <strong>Positive Reinforcement Training</strong> method. This means
-								that, instead of resorting to "corrections" (punishment) to deter undesired dog
-								reactions, we rely
-								solely on positive motivation (rewarding) to induce desirable behaviour. <br /><br />
-                        Put simply: we want your dog to obey you out of desire, not fear.</p>
+                            <div class="row justify-content-center">
+                                <div class="col-md-4 gallery">
+                                    <img src="assets/img/gallery1.jpg" />
+                                    <img src="assets/img/gallery2.jpg" />
+                                    <img src="assets/img/gallery3.jpg" />
+                                    <img src="assets/img/gallery4.jpg" />  
+                                </div> 
+                                <div class="col-md-4 gallery">
+                                    <img src="assets/img/gallery5.jpg" />   
+                                    <img src="assets/img/gallery6.jpg" />
+                                    <img src="assets/img/gallery7.jpg" />
+                                </div>   
+                                <div class="col-md-4 gallery">
+                                     <img src="assets/img/gallery8.jpg" />
+                                    <img src="assets/img/gallery9.jpg" />
+                                    <img src="assets/img/gallery10.jpg" />
+                                </div>                             
+                            </div>
+                            <div class="col-12">
+                                <p>
+                                    At K9Zen, we apply the <strong>Positive Reinforcement Training</strong> method. This means
+                                    that, instead of resorting to traditional "corrections" (punishment) to deter undesired dog
+                                    reactions, we rely
+                                    exclusively on positive motivation to induce desirable behaviour.
+                                </p>
+                                <p id="motto">Put simply: we always want your dog to obey you out of desire, never fear.</p>
 								<span><a  class="btn btn-primary btn-info" href="training.html" role="button">Our training</a></span>
+                            </div>
 						</div>
 					</div>
 				</div>
