--- a/training.html
+++ b/training.html
@@ -103,7 +103,7 @@
 					</div>
 					<div class="col-md-4 location-info">
 						<p>We are located at:</p>
-						<address><strong>Trg bana J. Jelačića 1, Zagreb</address></strong>
+						<address><strong>Trg bana J. Jelačića 45, Zagreb</address></strong>
 							<p>
                                 Situated in an urban environment, yet sufficiently secure from heavy traffic and
 								crowds
@@ -114,9 +114,7 @@
 							<p>
 					</div>
 					<div class="col-md-8 embed-responsive embed-responsive-16by9 location-map">
-						<iframe
-							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2780.899199336601!2d15.973845315775481!3d45.81327711810331!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4765d6fdbd6cc3b5%3A0x11808120af669ca0!2sTrg%20bana%20Josipa%20Jela%C4%8Di%C4%87a%201%2C%2010000%2C%20Zagreb!5e0!3m2!1sen!2shr!4v1575139076247!5m2!1sen!2shr"
-							width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2780.9267725687564!2d15.975725015775517!3d45.812724918140326!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4765d6fdd9101e27%3A0xb058b7bb640effe3!2sTrg%20bana%20Josipa%20Jela%C4%8Di%C4%87a%2045%2C%2010000%2C%20Zagreb!5e0!3m2!1sen!2shr!4v1575314824458!5m2!1sen!2shr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 					</div>
 				</section>
 				<section class="row justify-content-center frame--main" id="timetable">
