--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                                     reactions, we rely
                                     exclusively on positive motivation to induce desirable behaviour.
                                 </p>
-                                <p id="motto">Put simply: we always want your dog to obey you out of desire, never fear.</p>
-								<span><a  class="btn btn-primary btn-info" href="training.html" role="button">Our training</a></span>
+                                <p id="ethos">Put simply: we always want your dog to obey you out of desire, never out of fear.</p>
+								<span><a  class="btn btn-primary btn-info" href="training.html" role="button">What we offer</a></span>
                             </div>
 						</div>
 					</div>
