corrected HTML following online markup check

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
 		</nav>
         <!-- /Navbar -->
 	</header>
-	<article>
+	<main>
 		<div class="container-fluid contact-container">
 			<div class="container">
 				<section class="row justify-content-center frame--main contact-options">
@@ -93,7 +93,7 @@
 				</section>
 			</div>
 		</div>
-	</article>
+	</main>
 
     <!-- Modals - code copied from Bootstrap documentation and adapted -->
 	<div class="modal fade" id="callModal" tabindex="-1" role="dialog" aria-labelledby="callModalLabel"
