--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		</nav>
         <!-- /Navbar -->
 	</header>
-	<article>
+	<main>
 		<div class="container-fluid hero-container">
 			<section class="container jumbotron-container">
 				<div class="row">
@@ -67,20 +67,20 @@
 							<h2>Why K9Zen?</h2>
                             <div class="row justify-content-center">
                                 <div class="col-md-4 gallery">
-                                    <img src="assets/img/gallery1.jpg" />
-                                    <img src="assets/img/gallery2.jpg" />
-                                    <img src="assets/img/gallery3.jpg" />
-                                    <img src="assets/img/gallery4.jpg" />  
+                                    <img src="assets/img/gallery1.jpg" alt="picture 1"/>
+                                    <img src="assets/img/gallery2.jpg" alt="picture 2"/>
+                                    <img src="assets/img/gallery3.jpg" alt="picture 3"/>
+                                    <img src="assets/img/gallery4.jpg" alt="picture 4"/>  
                                 </div> 
                                 <div class="col-md-4 gallery">
-                                    <img src="assets/img/gallery5.jpg" />   
-                                    <img src="assets/img/gallery6.jpg" />
-                                    <img src="assets/img/gallery7.jpg" />
+                                    <img src="assets/img/gallery5.jpg" alt="picture 5"/>   
+                                    <img src="assets/img/gallery6.jpg" alt="picture 6"/>
+                                    <img src="assets/img/gallery7.jpg" alt="picture 7"/>
                                 </div>   
                                 <div class="col-md-4 gallery">
-                                     <img src="assets/img/gallery8.jpg" />
-                                    <img src="assets/img/gallery9.jpg" />
-                                    <img src="assets/img/gallery10.jpg" />
+                                     <img src="assets/img/gallery8.jpg" alt="picture 8"/>
+                                    <img src="assets/img/gallery9.jpg" alt="picture 9"/>
+                                    <img src="assets/img/gallery10.jpg" alt="picture 10"/>
                                 </div>                             
                             </div>
                             <div class="col-12">
@@ -98,7 +98,7 @@
 				</div>
 			</section>
 		</div>
-	</article>
+	</main>
 	<footer class="container-fluid footer-bar">
 		<div class="row">
 			<div class="col">
