--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 		</nav>
         <!-- /Navbar -->
 	</header>
-	<article>
+	<main>
 		<div class="container-fluid about-container">
 			<section class="container">
 				<div class="row justify-content-center about-us frame--main">
@@ -103,7 +103,7 @@
 				</div>    
 			</section>
 		</div>
-	</article>
+	</main>
 	<footer class="container-fluid footer-bar">
 		<div class="row">
 			<div class="col">
