--- a/training.html
+++ b/training.html
@@ -47,7 +47,7 @@
 		</nav>
         <!-- /Navbar-->
 	</header>
-	<article>
+	<main>
 		<div class="container-fluid training-container">
 			<div class="container" id="offer">
 				<section class="row frame--main offer-frame">
@@ -60,28 +60,28 @@
 							<p>
 								An essential course for any urban dog.
 							</p>
-							<span class="read--more"><a href="#"" class="inline--anchor" data-toggle="modal" data-target="#obedienceModal">Read more</a><span>
+							<span class="read--more"><a href="#" class="inline--anchor" data-toggle="modal" data-target="#obedienceModal">Read more</a></span>
 						</div>
 						<div class="col-sm-12 col-md-6 col-lg-3 trg">
 							<h4><i class="fas fa-magic"></i>Tricks Class</h4>
 							<p>
 								There is much more to tricks than just showing off.
 							</p>
-                            <span class="read--more"><a href="#"" class="inline--anchor" data-toggle="modal" data-target="#tricksModal">Read more</a><span>
+                            <span class="read--more"><a href="#" class="inline--anchor" data-toggle="modal" data-target="#tricksModal">Read more</a></span>
 						</div>
 						<div class="col-sm-12 col-md-6 col-lg-3 trg">
 							<h4><i class="fas fa-paw"></i>Individual Training</h4>
 							<p>
 								Same curriculum as classes but more flexibility.
 							</p>
-                            <span class="read--more"><a href="#"" class="inline--anchor" data-toggle="modal" data-target="#individualModal">Read more</a><span>
+                            <span class="read--more"><a href="#" class="inline--anchor" data-toggle="modal" data-target="#individualModal">Read more</a></span>
 						</div>
 						<div class="col-sm-12 col-md-6 col-lg-3 trg">
 							<h4><i class="far fa-comments"></i>Consultation</h4>
 							<p>
                                 When a particular issue requires additional focus.
 							</p>
-                            <span class="read--more"><a href="#"" class="inline--anchor" data-toggle="modal" data-target="#consultationModal">Read more</a><span>
+                            <span class="read--more"><a href="#" class="inline--anchor" data-toggle="modal" data-target="#consultationModal">Read more</a></span>
 						</div>
 						<div class="row justify-content-center trg-more-info">
 							<div class="col-11">
@@ -100,11 +100,11 @@
 				</section>
 				<section class="row frame--main" id="location">
 					<div class="col-12 location-header">
-						<h2>Where we train<h2>
+						<h2>Where we train</h2>
 					</div>
 					<div class="col-md-4 location-info">
 						<p>We are located at:</p>
-						<address><strong>Trg bana J. Jelačića 45, Zagreb</address></strong>
+						<address><strong>Trg bana J. Jelačića 45, Zagreb</strong></address>
 							<p>
                                 Situated in an urban environment, yet sufficiently secure from heavy traffic and
 								crowds
@@ -115,7 +115,7 @@
 							<p>
 					</div>
 					<div class="col-md-8 embed-responsive embed-responsive-16by9 location-map">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2780.9267725687564!2d15.975725015775517!3d45.812724918140326!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4765d6fdd9101e27%3A0xb058b7bb640effe3!2sTrg%20bana%20Josipa%20Jela%C4%8Di%C4%87a%2045%2C%2010000%2C%20Zagreb!5e0!3m2!1sen!2shr!4v1575314824458!5m2!1sen!2shr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2780.9267725687564!2d15.975725015775517!3d45.812724918140326!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4765d6fdd9101e27%3A0xb058b7bb640effe3!2sTrg%20bana%20Josipa%20Jela%C4%8Di%C4%87a%2045%2C%2010000%2C%20Zagreb!5e0!3m2!1sen!2shr!4v1575314824458!5m2!1sen!2shr" width="600" height="450" style="border:0;" allowfullscreen=""></iframe>
 					</div>
 				</section>
 				<section class="row justify-content-center frame--main" id="timetable">
@@ -175,7 +175,7 @@
 				</section>
 			</div>
 		</div>
-	</article>
+	</main>
 	<!-- Modals - code copied from Bootstrap documentation and adapted -->
 	<div class="modal fade" id="obedienceModal" tabindex="-1" role="dialog" aria-labelledby="obedienceModalLabel"
 		aria-hidden="true">
