added content to about.html; minor code fixes

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
 				</ul>
 			</div>
 		</nav>
-        <!-- /Navbar -->
+		<!-- /Navbar -->
 	</header>
 	<main>
 		<div class="container-fluid about-container">
@@ -54,53 +54,58 @@
 					<div class="col-12 about-heading">
 						<h2>Our instructors</h2>
 					</div>
-				    <div class="row justify-content-center frame--info about-jane">
-					    <div class="col-md-6 jane-image">
-							<img src="assets/img/jane.jpg" alt="Jane photo"/>
+					<div class="row justify-content-center frame--info about-jane">
+						<div class="col-md-6 jane-image">
+							<img src="assets/img/jane.jpg" alt="Jane photo" title="Jane"/>
 					    </div>
-					    <div class="col-md-6 jane-text">
-							<h4>Jane Smith</h4>
-							<p>
-									Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, magnam harum
-									consectetur
-									unde cum recusandae inventore excepturi id, sequi facilis numquam velit maiores.
-									Commodi
-									doloremque ea totam ut ad alias rem, blanditiis incidunt vel! Illum, provident ab?
-									Facere,
-									laboriosam id! Eos vero omnis ea soluta eum quibusdam repellendus officiis
-									veritatis?
+							<div class="col-md-6 jane-text">
+								<h4>Jane Smith</h4>
 								<p>
-					    </div>
-				    </div>
-				    <div class="row justify-content-center frame--info about-john">
-					    <div class="col-md-6 john-text">
+									After graduating from vet school, Jane has specialised in dogs and dog behaviour.
+									While
+									she still works part-time in a vet clinic, she has dedicated most of her time to dog
+									training, observation and owner counselling. Jane also occasionally acts as an
+									expert consultant on dog-related incidents. Her education on dog
+									training includes international seminars <em>"New approaches
+									to dog obedience training"</em> (Munich, 2009) and <em>"Insights into canine psychology -
+									21st-century update"</em> (Montreal, 2011) as well as the international conference
+									<em>"Impact of training atmosphere
+									on dog-owner relationship"</em> (Sydney, 2014).<br /><br />
+                                    Jane is a proud owner of a lab named Skip and a mixed-breed called Bella.
+									<p>
+							</div>
+						</div>
+						<div class="row justify-content-center frame--info about-john">
+							<div class="col-md-6 john-text">
 								<h4>John Smith</h4>
 								<p>
-									Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, magnam harum
-									consectetur
-									unde cum recusandae inventore excepturi id, sequi facilis numquam velit maiores.
-									Commodi
-									doloremque ea totam ut ad alias rem, blanditiis incidunt vel! Illum, provident ab?
-									Facere,
-									laboriosam id! Eos vero omnis ea soluta eum quibusdam repellendus officiis
-									veritatis?
+									A computer engineer by profession, John was introduced into the wonderful dog world
+									by his father, a Ridgeback breeder. From his early days with the dogs, John realised
+									that there is more to getting a dog to obey and follow him than just using
+									discipline and force. Having left his first office job and having started a
+									freelance developer career in 2010, John began exploring the emerging positive approaches to dog
+									training and became acquainted the Positive Reinforcement Training method. He earned his
+									PRT Trainer Certificate in 2013 and has since attended numerous seminars and
+									workshops about the method, including the <em>"Relaxed dog - Happy dog"</em>
+									international workshop in Vienna in 2017.<br /> <br />
+                                    John's best quadrupede friend is a Border Collie named Sparky,
 								</p>
+							</div>
+							<div class="col-md-6 john-image">
+								<img src="assets/img/john.jpg" alt="John photo" title="John"/>
 					    </div>
-					    <div class="col-md-6 john-image">
-								<img src="assets/img/john.jpg" alt="John photo"/>
-					    </div>
-				    </div>
-				    <div class="row justify-content-center frame--info learn-more">
-					    <div class="col-10">
-							<p>
+							</div>
+							<div class="row justify-content-center frame--info learn-more">
+								<div class="col-10">
+									<p>
 										Would you like to know more about our instructors or about Positive
 										Reinforcement
 										Training? <br />Please do not hesitate to
 										<span><a class="inline--anchor" href="contact.html">contact us</a></span>.
-							</p>
-					    </div>
-				    </div>
-				</div>    
+									</p>
+								</div>
+							</div>
+						</div>
 			</section>
 		</div>
 	</main>
