--- a/index.html
+++ b/index.html
@@ -67,20 +67,20 @@
 							<h2>Why K9Zen?</h2>
                             <div class="row justify-content-center">
                                 <div class="col-md-4 gallery">
-                                    <img src="assets/img/gallery1.jpg" alt="picture 1"/>
-                                    <img src="assets/img/gallery2.jpg" alt="picture 2"/>
-                                    <img src="assets/img/gallery3.jpg" alt="picture 3"/>
-                                    <img src="assets/img/gallery4.jpg" alt="picture 4"/>  
+                                    <img src="assets/img/gallery1.jpg" alt="picture 1" title="picture 1"/>
+                                    <img src="assets/img/gallery2.jpg" alt="picture 2" title="picture 2"/>
+                                    <img src="assets/img/gallery3.jpg" alt="picture 3" title="picture 3"/>
+                                    <img src="assets/img/gallery4.jpg" alt="picture 4" title="picture 4"/>  
                                 </div> 
                                 <div class="col-md-4 gallery">
-                                    <img src="assets/img/gallery5.jpg" alt="picture 5"/>   
-                                    <img src="assets/img/gallery6.jpg" alt="picture 6"/>
-                                    <img src="assets/img/gallery7.jpg" alt="picture 7"/>
+                                    <img src="assets/img/gallery5.jpg" alt="picture 5" title="picture 5"/>   
+                                    <img src="assets/img/gallery6.jpg" alt="picture 6" title="picture 6"/>
+                                    <img src="assets/img/gallery7.jpg" alt="picture 7" title="picture 7"/>
                                 </div>   
                                 <div class="col-md-4 gallery">
-                                     <img src="assets/img/gallery8.jpg" alt="picture 8"/>
-                                    <img src="assets/img/gallery9.jpg" alt="picture 9"/>
-                                    <img src="assets/img/gallery10.jpg" alt="picture 10"/>
+                                    <img src="assets/img/gallery8.jpg" alt="picture 8" title="picture 8"/>
+                                    <img src="assets/img/gallery9.jpg" alt="picture 9" title="picture 9"/>
+                                    <img src="assets/img/gallery10.jpg" alt="picture 10" title="picture 10"/>
                                 </div>                             
                             </div>
                             <div class="col-12">
