--- a/training.html
+++ b/training.html
@@ -202,7 +202,7 @@
 					</div>
 			</div>
 		</div>
-		<div class="modal fade" id="tricksModal" tabindex="-1" role="dialog" aria-labelledby="tricksModalLabel"
+		<div class="modal flipXin" id="tricksModal" tabindex="-1" role="dialog" aria-labelledby="tricksModalLabel"
 			aria-hidden="true">
 			<div class="modal-dialog" role="document">
 				<div class="modal-content custom--modal-bg">
@@ -227,7 +227,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="modal fade" id="individualModal" tabindex="-1" role="dialog" aria-labelledby="individualModalLabel"
+		<div class="modal flipYin" id="individualModal" tabindex="-1" role="dialog" aria-labelledby="individualModalLabel"
 			aria-hidden="true">
 			<div class="modal-dialog" role="document">
 				<div class="modal-content custom--modal-bg">
