image descriptions and typo corrections

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 							<a class="dropdown-item" href="index.html#prt">Why K9Zen?</a>
-                            				<hr />
+                            <hr />
 							<a class="dropdown-item" href="training.html">What we offer</a>
 							<a class="dropdown-item" href="training.html#location">Where we train</a>
 							<a class="dropdown-item" href="training.html#timetable">Class timetable</a>
@@ -61,7 +61,7 @@
 							<div class="col-md-6 jane-text">
 								<h4>Jane Smith</h4>
 								<p>
-									After graduating from vet school, Jane has specialised in dogs and dog behaviour.
+									After graduating from vet school, Jane specialised in dogs and dog behaviour.
 									While
 									she still works part-time in a vet clinic, she has dedicated most of her time to dog
 									training, observation and owner counselling. Jane also occasionally acts as an
@@ -82,13 +82,13 @@
 									A computer engineer by profession, John was introduced into the wonderful dog world
 									by his father, a Ridgeback breeder. From his early days with the dogs, John realised
 									that there is more to getting a dog to obey and follow him than just using
-									discipline and force. Having left his first office job and having started a
+									discipline and force. Having left his office job for a
 									freelance developer career in 2010, John began exploring the emerging positive approaches to dog
-									training and became acquainted the Positive Reinforcement Training method. He earned his
+									training and became acquainted with the Positive Reinforcement Training method. He earned his
 									PRT Trainer Certificate in 2013 and has since attended numerous seminars and
 									workshops about the method, including the <em>"Relaxed dog - Happy dog"</em>
 									international workshop in Vienna in 2017.<br /> <br />
-                                    John's best quadrupede friend is a Border Collie named Sparky,
+                                    John's best quadruped friend is a Border Collie named Sparky,
 								</p>
 							</div>
 							<div class="col-md-6 john-image">
