--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 							<a class="dropdown-item" href="#prt">Why K9Zen?</a>
-                            				<hr />
+                            <hr />
 							<a class="dropdown-item" href="training.html">What we offer</a>
 							<a class="dropdown-item" href="training.html#location">Where we train</a>
 							<a class="dropdown-item" href="training.html#timetable">Class timetable</a>
@@ -53,7 +53,7 @@
 				<div class="row">
 					<div class="col-12">
 						<div class="jumbotron frame--main">
-							<h1 class="display-4">K9Zen Training School</h1>
+							<h1 class="display-4">K9Zen Dog Training</h1>
 							<p class="lead">Because your favourite snout deserves the best.</p>
 							<a class="btn btn-primary btn-info" href="#prt" role="button">Discover us!</a>
 						</div>
@@ -67,20 +67,20 @@
 							<h2>Why K9Zen?</h2>
                             <div class="row justify-content-center">
                                 <div class="col-md-4 gallery">
-                                    <img src="assets/img/gallery1.jpg" alt="picture 1" title="picture 1"/>
-                                    <img src="assets/img/gallery2.jpg" alt="picture 2" title="picture 2"/>
-                                    <img src="assets/img/gallery3.jpg" alt="picture 3" title="picture 3"/>
-                                    <img src="assets/img/gallery4.jpg" alt="picture 4" title="picture 4"/>  
+                                    <img src="assets/img/gallery1.jpg" alt="City break" title="City break"/>
+                                    <img src="assets/img/gallery2.jpg" alt="Sky's the limit" title="Sky's the limit"/>
+                                    <img src="assets/img/gallery3.jpg" alt="Forest quest" title="Forest quest"/>
+                                    <img src="assets/img/gallery4.jpg" alt="Following your lead" title="Following your lead"/>  
                                 </div> 
                                 <div class="col-md-4 gallery">
-                                    <img src="assets/img/gallery5.jpg" alt="picture 5" title="picture 5"/>   
-                                    <img src="assets/img/gallery6.jpg" alt="picture 6" title="picture 6"/>
-                                    <img src="assets/img/gallery7.jpg" alt="picture 7" title="picture 7"/>
+                                    <img src="assets/img/gallery5.jpg" alt="Winter fun" title="Winter fun"/>   
+                                    <img src="assets/img/gallery6.jpg" alt="Everlasting love" title="Everlasting love"/>
+                                    <img src="assets/img/gallery7.jpg" alt="Together into the sunset" title="Together into the sunset"/>
                                 </div>   
                                 <div class="col-md-4 gallery">
-                                    <img src="assets/img/gallery8.jpg" alt="picture 8" title="picture 8"/>
-                                    <img src="assets/img/gallery9.jpg" alt="picture 9" title="picture 9"/>
-                                    <img src="assets/img/gallery10.jpg" alt="picture 10" title="picture 10"/>
+                                    <img src="assets/img/gallery8.jpg" alt="Best friends forever" title="Best friends forever"/>
+                                    <img src="assets/img/gallery9.jpg" alt="By your side" title="By your side"/>
+                                    <img src="assets/img/gallery10.jpg" alt="Snow sports" title="Snow sports"/>
                                 </div>                             
                             </div>
                             <div class="col-12">
