--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                     exclusively on positive motivation to induce desirable behaviour.
                                 </p>
                                 <p id="ethos">Put simply: we always want your dog to obey you out of desire, never out of fear.</p>
-								<span><a  class="btn btn-primary btn-info" href="training.html" role="button">What we offer</a></span>
+								<span><a  class="btn btn-primary btn-info" href="training.html" role="button">Let's train!</a></span>
                             </div>
 						</div>
 					</div>
